# love-rapier

./: .busted  .gitignore  .luarc.json  LICENSE  README.md  conf.lua  main.lua
.github/workflows/: build.yml
docs/: api.md
lib/native/macos-arm64/: librapier_shim.dylib
lib/native/macos-x86_64/: librapier_shim.dylib
native/rapier_shim/: Cargo.toml  cbindgen.toml  rapier_shim.h
native/rapier_shim/src/: lib.rs
rapier/: ffi.lua  init.lua  system.lua
scripts/: build-native.sh
tests/: audit.test.lua  complete.test.lua  extended.test.lua  parity.test.lua  run.lua  system.test.lua  world.test.lua
